--- a/bettersis/android/app/build.gradle
+++ b/bettersis/android/app/build.gradle
@@ -3,6 +3,12 @@ plugins {
     id "kotlin-android"
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
+    id 'com.google.gms.google-services'
+}
+
+dependencies {
+  implementation platform('com.google.firebase:firebase-bom:33.3.0')
+  implementation 'com.google.firebase:firebase-analytics'
 }
 
 android {
@@ -41,4 +47,4 @@ android {
 
 flutter {
     source = "../.."
-}
+} 
