--- a/bettersis/android/build.gradle
+++ b/bettersis/android/build.gradle
@@ -1,3 +1,13 @@
+buildscript {
+    repositories {
+        google()
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.google.gms:google-services:4.4.2' 
+    }
+}
+
 allprojects {
     repositories {
         google()
