Implement Firebase Auth

--- a/bettersis/android/app/build.gradle
+++ b/bettersis/android/app/build.gradle
@@ -1,14 +1,11 @@
 plugins {
     id "com.android.application"
+    // START: FlutterFire Configuration
+    id 'com.google.gms.google-services'
+    // END: FlutterFire Configuration
     id "kotlin-android"
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
-    id 'com.google.gms.google-services'
-}
-
-dependencies {
-  implementation platform('com.google.firebase:firebase-bom:33.3.0')
-  implementation 'com.google.firebase:firebase-analytics'
 }
 
 android {
