--- a/bettersis/pubspec.yaml
+++ b/bettersis/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   firebase_core: ^3.6.0
   firebase_auth: ^5.3.1
   url_launcher: ^6.3.0
+  cloud_firestore: ^5.4.3
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
