--- a/bettersis/pubspec.yaml
+++ b/bettersis/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   url_launcher: ^6.3.0
   cloud_firestore: ^5.4.3
   get: ^4.6.6
+  qr_flutter: ^4.1.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
