Add firestorage feature

--- a/bettersis/pubspec.yaml
+++ b/bettersis/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   get: ^4.6.6
   qr_flutter: ^4.1.0
   intl: ^0.19.0
+  firebase_storage: ^12.3.2
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +66,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - assets/default_user.jpg
 
 
   # To add assets to your application, add an assets section, like this:
