--- a/bettersis/pubspec.yaml
+++ b/bettersis/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   qr_flutter: ^4.1.0
   intl: ^0.19.0
   firebase_storage: ^12.3.2
+  fl_chart: ^0.69.0
 
 dev_dependencies:
   flutter_test:
