--- a/bettersis/pubspec.yaml
+++ b/bettersis/pubspec.yaml
@@ -55,9 +55,17 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  flutter_launcher_icons: ^0.14.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon.png"
+  adaptive_icon_background: "#FFFFFF" 
+  adaptive_icon_foreground: "assets/icon.png"
 
 
 # The following section is specific to Flutter packages.
@@ -70,6 +78,7 @@ flutter:
 
   assets:
     - assets/default_user.jpg
+    - assets/icon.png
 
 
   # To add assets to your application, add an assets section, like this:
