--- a/bettersis/pubspec.yaml
+++ b/bettersis/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   intl: ^0.19.0
   firebase_storage: ^12.3.2
   fl_chart: ^0.69.0
+  google_generative_ai: ^0.4.6
+  flutter_markdown: ^0.7.3+2
 
 dev_dependencies:
   flutter_test:
@@ -56,6 +58,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
   flutter_launcher_icons: ^0.14.1
+  flutter_dotenv: ^5.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
