--- a/bettersis/pubspec.yaml
+++ b/bettersis/pubspec.yaml
@@ -87,6 +87,7 @@ flutter:
   assets:
     - assets/default_user.jpg
     - assets/icon.png
+    - .env
 
 
   # To add assets to your application, add an assets section, like this:
