--- a/bettersis/pubspec.yaml
+++ b/bettersis/pubspec.yaml
@@ -48,6 +48,10 @@ dependencies:
   flutter_markdown: ^0.7.3+2
   flutter_native_splash: ^2.4.1
   uuid: ^4.5.1
+  flutter_pdfview: ^1.3.3
+  syncfusion_flutter_pdfviewer: ^27.1.52
+  path_provider: ^2.1.4
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
