--- a/bettersis/pubspec.yaml
+++ b/bettersis/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   path_provider: ^2.1.4
   http: ^1.2.2
   provider: ^6.1.2
+  pdf: ^3.11.1
+  printing: ^5.13.3
 
 dev_dependencies:
   flutter_test:
