--- a/bettersis/pubspec.yaml
+++ b/bettersis/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   printing: ^5.13.3
   permission_handler: ^11.3.1
   dio: ^5.7.0
+  excel: ^4.0.6
 
 dev_dependencies:
   flutter_test:
@@ -100,6 +101,7 @@ flutter:
     - assets/iut_logo.png
     - assets/oic_logo.jpg
     - .env
+    - assets/students_data.xlsx
 
   # To add assets to your application, add an assets section, like this:
   # assets:
