--- a/bettersis/pubspec.yaml
+++ b/bettersis/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   permission_handler: ^11.3.1
   dio: ^5.7.0
   excel: ^4.0.6
+  table_calendar: ^3.1.2
 
 dev_dependencies:
   flutter_test:
