--- a/bettersis/pubspec.yaml
+++ b/bettersis/pubspec.yaml
@@ -1,8 +1,8 @@
 name: bettersis
-description: "A new Flutter project."
+description: 'A new Flutter project.'
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: "none" # Remove this line if you wish to publish to pub.dev
+publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -59,6 +59,7 @@ dependencies:
   dio: ^5.7.0
   excel: ^4.0.6
   table_calendar: ^3.1.2
+  bkash: ^0.0.2
 
 dev_dependencies:
   flutter_test:
@@ -79,14 +80,14 @@ dev_dependencies:
 flutter_launcher_icons:
   android: true
   ios: true
-  image_path: "assets/icon.png"
-  adaptive_icon_background: "#FFFFFF"
-  adaptive_icon_foreground: "assets/icon.png"
+  image_path: 'assets/icon.png'
+  adaptive_icon_background: '#FFFFFF'
+  adaptive_icon_foreground: 'assets/icon.png'
 
 flutter_native_splash:
   android: true
   ios: true
-  color: "#2196f3"
+  color: '#2196f3'
 
 # The following section is specific to Flutter packages.
 flutter:
