--- a/bettersis/pubspec.yaml
+++ b/bettersis/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   firebase_auth: ^5.3.1
   url_launcher: ^6.3.0
   cloud_firestore: ^5.4.3
-  get: ^4.6.6
+  get: ^4.7.2
   qr_flutter: ^4.1.0
   intl: ^0.19.0
   firebase_storage: ^12.3.2
@@ -50,7 +50,7 @@ dependencies:
   uuid: ^4.5.1
   flutter_pdfview: ^1.3.4
   syncfusion_flutter_pdfviewer: ^27.1.52
-  path_provider: ^2.1.4
+  path_provider: ^2.1.5
   http: ^1.2.2
   provider: ^6.1.2
   pdf: ^3.11.1
@@ -60,6 +60,7 @@ dependencies:
   excel: ^4.0.6
   table_calendar: ^3.1.2
   bkash: ^0.0.2
+  shared_preferences: ^2.5.2
 
 dev_dependencies:
   flutter_test:
